--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "nunomaduro/collision": "^6.4",
         "pestphp/pest": "^1.22",
         "pestphp/pest-plugin-laravel": "^1.2",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "yajra/laravel-datatables": "^1.5"
     },
     "autoload": {
         "files": [
